# splang

./: Cargo.toml  LICENSE
.github/: dependabot.yml
.github/workflows/: build.yml
src/: main.rs
